# pob-wasm

./: .gitignore  .gitmodules  Cargo.toml  SCRATCHPAD.txt
.github/workflows/: ci.yml
crates/data-extractor/: Cargo.toml
crates/data-extractor/src/: dat64.rs  error.rs  ggpk_reader.rs  main.rs
crates/data-extractor/src/transform/: bases.rs  gems.rs  misc.rs  mod.rs  mods.rs  tree.rs
crates/pob-calc/: Cargo.toml
crates/pob-wasm/: Cargo.toml  smoke-test.html
crates/pob-wasm/src/: lib.rs
crates/pob-wasm/tests/: wasm.rs
data/: bases.json  gem_reqs.json  gems.json  mastery_effects.json  misc.json  pantheons.json  tattoos.json  uniques.json
data/tree/: poe1_3_13.json  poe1_3_6.json  poe1_current.json  poe2_current.json
docker/oracle/: Dockerfile  run_oracle_tests.sh
docs/: COMPLETENESS.md  PARITY-WALKTHROUGH.md
docs/lua-reference/: AGG-01-full-dps.md  BASELINE-PARITY.txt  DEF-01-resistances.md  DEF-02-armour-evasion-es-ward.md  DEF-03-block-suppression.md  DEF-04-damage-reduction-avoidance.md  DEF-05-recovery-in-defence.md  DEF-06-ehp.md  FIX-08-mana-computation.md  LUA-GOTCHAS.md  MIR-01-mirages.md  OFF-01-base-damage.md  OFF-02-conversion.md  OFF-03-crit-hit.md  OFF-04-speed-dps.md  OFF-05-ailments.md  OFF-06-dot-impale.md  OFF-07-combined-dps.md  PERF-01-attributes.md  PERF-02-life-mana-es.md  PERF-03-charges.md  PERF-04-reservation.md  PERF-05-buffs.md  PERF-06-aura-curse.md  (+18 more)
scripts/: extract.sh  extract_mastery_effects.py  extract_pob_data.sh  extract_tattoo_passives.py  field_inventory.py  field_inventory_output.json  gen_oracle.lua  generate_all_oracles.sh  run_oracle.sh
tools/pob-data-extractor/: Cargo.toml
tools/pob-data-extractor/src/: extract_bases.rs  extract_gems.rs  extract_mods.rs  extract_uniques.rs  lua_env.rs  main.rs  types.rs
(+141 files in other folders)
