[package]
name = "pob-data-extractor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pob-data-extractor"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
mlua = { version = "0.10", features = ["luajit", "serialize"] }
clap = { version = "4", features = ["derive"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
